# bandidos

./: README.md  setup.cfg
src/bandidos/: __init__.py  arm.py  problem.py  runner.py
src/bandidos/builtins/arms/: __init__.py  normal.py
tests/: run_tests.sh  test_arm.py  test_builtin_arms.py  test_problem.py  test_runner.py
