[metadata]
name = bandidos
version = 1.0
author = Carter Fendley
description = A testing suite for multi-armed bandit algorithms 
url = https://carterfendley.com
license = MIT
platforms = any 
project_urls =
    Bug Tracker = https://carterfendley.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
install_requires =
    tqdm
    plotly
    numpy
    scipy
    pytest
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src